# position-based-fluids

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  main_2d.cpp  plot.py  smoke_sim.cpp
include/: animate_fluids.h  animate_implicit.h  animate_lbfgs.h  animate_smoke.h  animate_sph.h  boundary_conditions.h  calculate_delta_p.h  calculate_densities.h  calculate_lambda.h  cubic_bspline.h  energy_refinement.h  find_neighbor.h  find_neighbors_brute_force.h  find_neighbors_compact.h  forces.h  line_search.h  predict_position.h  pressure.h  spacing_energy.h  surface_tension.h  vorticity_confinement.h
src/: animate_fluids.cpp  animate_implicit.cpp  animate_lbfgs.cpp  animate_smoke.cpp  animate_sph.cpp  calculate_delta_p.cpp  calculate_densities.cpp  calculate_lambda.cpp  energy_refinement.cpp  find_neighbor.cpp  find_neighbors_compact.cpp  forces.cpp  line_search.cpp  predict_position.cpp  pressure.cpp  vorticity_confinement.cpp
